--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "db_gamelab_development",
-    "host": "127.0.0.1",
+    "username": "zAayATgECJWM7pfl",
+    "password": "YFX8cZP3uc50CWxM",
+    "database": "HNWWhdeZrfClViGl",
+    "host": "educalab.id:3307",
     "dialect": "mysql"
   },
   "test": {
@@ -14,10 +14,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "db_gamelab_production",
-    "host": "127.0.0.1",
+    "username": "zAayATgECJWM7pfl",
+    "password": "YFX8cZP3uc50CWxM",
+    "database": "HNWWhdeZrfClViGl",
+    "host": "educalab.id:3307",
     "dialect": "mysql"
   }
 }
