--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -3,7 +3,8 @@
     "username": "zAayATgECJWM7pfl",
     "password": "YFX8cZP3uc50CWxM",
     "database": "HNWWhdeZrfClViGl",
-    "host": "educalab.id:3307",
+    "host": "educalab.id",
+    "port" : 3307,
     "dialect": "mysql"
   },
   "test": {
