--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
     "d3": "^7.9.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "vue": "^3.2.13",
     "vue-cal": "^4.8.1",
     "vue-router": "^4.3.3",
